Update ‘slide deck.Rpres’

--- a/CapstoneProject_SlideDeck-rpubs.html
+++ b/CapstoneProject_SlideDeck-rpubs.html
@@ -759,7 +759,7 @@ hljs.initHighlightingOnLoad();
 <section data-transition="linear" data-transition-speed="default">
 <h3>What is it?</h3>
 <div class="slideContent" >
-<p>This app guess what is the word you may think<br/>
+<p>This app guesses what is the word you may think<br/>
 and recommends the maximum three words that are highly probable.</p>
 
 <ul>
